--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
   height: 50px;
   width: 50px;
   padding: 25px 25px 0px 0px;
+  margin-bottom: -12px;
 }
 
 .search {
@@ -50,6 +51,7 @@ nav ul {
 
 nav li {
   display: inline-block;
+  vertical-align: bottom;
 }
 
 a {
