--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
   display: inline-block;
   height: 120px;
   width: 250px;
-  float: left;
   margin-right: 25px;
   align-items: initial;
 }
@@ -28,7 +27,7 @@
 header {
   display: flex;
   align-items: flex-end;
-  height: 122px;
+  min-height: 122px;
 }
 
 header a {
@@ -146,4 +145,19 @@ p {
   object-fit: cover;
   width: 150px;
   height: 150px;
+}
+
+@media (max-width: 800px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+  main {
+    max-width: 100vw;
+  }
+
+  .featured {
+    flex-direction: column;
+    align-items: center;
+  }
 }
