--- a/styles.css
+++ b/styles.css
@@ -46,10 +46,12 @@ nav {
 
 nav ul {
   padding: 25px 25px 0px 0px;
+  display: flex;
+  align-items: flex-end;
+  list-style-type: none;
 }
 
 nav li {
-  display: inline-block;
   vertical-align: bottom;
 }
 
@@ -60,7 +62,8 @@ a {
 body {
   font-family: "Mic 32 New";
   min-height: 100vh;
-  margin: 0px;
+  max-width: 1600px;
+  margin: 0px auto;
   display: grid;
   -ms-grid-row-align: end;
   grid-template-rows: auto;
@@ -71,7 +74,7 @@ body {
   background-image: url("images/wideimagecomp1.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-x: right;
+  background-position-x: center;
   background-position-y: bottom;
   min-height: 70vh;
   position: relative;
@@ -152,12 +155,26 @@ p {
     flex-direction: column;
     align-items: center;
   }
-  main {
+
+  header main {
     max-width: 100vw;
+  }
+
+  nav ul {
+    flex-direction: column;
+    align-items: center;
   }
 
   .featured {
     flex-direction: column;
     align-items: center;
+  }
+
+  .featured img {
+    width: 80vw;
+    height: 80vh;
+  }
+  #logo {
+    margin-right: 0px;
   }
 }
