--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 @font-face {
-  font-family: "Mic 32 New";
+  font-family: "mic-32-new-web", Verdana, sans-serif;
   src: url(https://use.typekit.net/ocq6hsb.css);
+}
+
+:root {
+  --green-color: #067a6f;
 }
 
 #logo {
@@ -34,7 +38,7 @@ header a {
   display: flex;
   align-items: flex-end;
   background-color: white;
-  color: #40aea3;
+  color: var(--green-color);
   padding: 25px 25px 0px 25px;
   font-size: 30px;
   font-weight: bolder;
@@ -42,6 +46,15 @@ header a {
 
 nav {
   margin-left: 25px;
+  display: none;
+}
+
+#hamburger-menu {
+  display: none;
+}
+
+#hamburger-menu: :checked ~ nav {
+  display: block;
 }
 
 nav ul {
@@ -83,18 +96,22 @@ body {
 .welcome__content {
   position: absolute;
   text-align: center;
-  top: 100px;
-  left: 100px;
+  top: 10px;
+  left: 0px;
   color: white;
   font-size: 40px;
+}
+
+h1 {
+  -webkit-text-stroke: 1px grey;
 }
 
 .cta {
   background-color: white;
   opacity: 82%;
-  color: #40aea3;
+  color: var(--green-color);
   font-size: 1em;
-  padding: 10px 80px;
+  padding: 10px 42px;
   font-weight: bold;
 }
 
@@ -103,7 +120,7 @@ body {
   padding: 5px;
   font-size: 30px;
   word-wrap: break-word;
-  color: #40aea3;
+  color: var(--green-color);
 }
 
 p {
@@ -113,18 +130,12 @@ p {
 
 .products {
   background-color: white;
-  display: grid;
-  grid-template-columns: 1fr auto;
   align-items: center;
-}
-
-.products img {
-  grid-column: -1/1;
+  flex: 1;
 }
 
 .products h2,
 .products p {
-  grid-column: 1;
   font-size: 0.9em;
   margin: 5px;
   text-align: center;
@@ -142,11 +153,12 @@ p {
   max-width: 1000px;
   margin: 10px auto;
   grid-gap: 10px;
+  flex-wrap: wrap;
 }
 
 .featured img {
   object-fit: cover;
-  width: 150px;
+  width: 100%;
   height: 150px;
 }
 
