--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   --green-color: #067a6f;
 }
 
-#logo {
+.logo {
   display: inline-block;
   height: 120px;
   width: 250px;
@@ -147,11 +147,29 @@ p {
   flex-wrap: wrap;
 }
 
+.featured-list {
+  display: grid;
+  gap: 20px;
+}
+
+.jacket-products {
+  background-color: white;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.jacket-products img {
+  grid-column: -1/1;
+}
+
 .featured img {
   object-fit: cover;
   width: 100%;
   height: 150px;
 }
+
+/*Product Pages*/
 
 @media (max-width: 800px) {
   header {
