--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
   display: inline-block;
   height: 50px;
   width: 50px;
-  padding: 25px 25px 0px 100px;
+  padding: 25px 25px 0px 200px;
   margin-bottom: -12px;
 }
 
@@ -27,7 +27,7 @@
   display: inline-block;
   height: 50px;
   width: 50px;
-  padding: 25px 25px 0px 0px;
+  padding: 25px 25px 0px 50px;
   margin-bottom: 0px;
 }
 
@@ -83,7 +83,7 @@ body {
 
 /* Home page */
 .welcome {
-  background-image: url("images/wideimagecomp1.jpeg");
+  background-image: url("../images/wideimagecomp1.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -95,16 +95,16 @@ body {
 .welcome__content {
   position: absolute;
   text-align: center;
-  top: 100px;
-  left: 100px;
-  color: var(--green-color);
+  top: 10px;
+  left: 180px;
+  color: #023530;
   font-size: 40px;
 }
 
 .cta {
   background-color: white;
   opacity: 82%;
-  color: var(--green-color);
+  color: #023530;
   font-size: 1em;
   padding: 10px 42px;
   font-weight: bold;
@@ -172,17 +172,56 @@ p {
   color: rgb(46, 45, 45);
 }
 
+.contacts {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .contact_img {
-  max-width: 1200px;
+  background-size: cover;
+  width: 100%;
+  max-height: 50vw;
 }
 
 .contact_points {
+  display: inline-block;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.contact_points img {
+  object-fit: cover;
+  width: 150px;
+  height: 150px;
+}
+
+.contact_points h3 {
+  grid-column: 1;
+  font-size: 0.8em;
+  margin: 5px;
+  text-align: center;
+  max-width: 150px;
 }
 /*Product Pages*/
-
 footer {
+  border-top: 1px solid;
+  border-color: #475251;
+}
+
+footer p {
   text-align: right;
   padding: 20px;
+}
+
+footer a {
+  display: flex;
+  text-align: left;
+  font-size: 1.5em;
+  font-weight: bolder;
+  padding: 20px;
+  color: #475251;
+  align-items: center;
 }
 
 @media (max-width: 800px) {
