--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,42 @@ p {
   height: 150px;
 }
 
+/* Checkout page */
+
+.checkout_cta {
+  background-color: #023530;
+  color: white;
+  font-size: 1em;
+  padding: 10px 42px;
+  font-weight: bold;
+  border: 1px solid #ccc;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+}
+
+.item-1 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: row1-start;
+  grid-row-end: last-line;
+}
+
+.item-2 {
+  grid-column-start: 2;
+  grid-row: 3;
+}
+
+.item-3 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+/* Checkout success*/
+
 .success {
   background-size: 50vw 33vw;
   background-repeat: no-repeat;
@@ -172,6 +208,8 @@ p {
   font-size: 1.8em;
   color: rgb(46, 45, 45);
 }
+
+/* Search page */
 
 .search_page img {
   background-size: cover;
@@ -197,6 +235,7 @@ p {
   top: 300px;
   left: 180px;
 }
+/* Contact page */
 
 .contacts {
   display: flex;
@@ -229,7 +268,7 @@ p {
   text-align: center;
   max-width: 150px;
 }
-/*Product Pages*/
+/* Footer */
 footer {
   border-top: 1px solid;
   border-color: #475251;
