--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,9 @@ body {
   font-weight: bold;
 }
 
+.cta:hover {
+  background: rgb(132, 165, 162);
+}
 .content {
   text-align: center;
   padding: 5px;
@@ -160,6 +163,21 @@ p {
 
 /* Checkout page */
 
+form {
+  padding: 1em;
+  background: white;
+  border: 1px solid #ccc;
+  margin-top: 2rem;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+form input {
+  margin-bottom: 1rem;
+  background: white;
+  border: 1px solid #ccc;
+}
 .checkout_cta {
   background-color: #023530;
   color: white;
@@ -169,10 +187,13 @@ p {
   border: 1px solid #ccc;
 }
 
+.checkout_cta:hover {
+  background: rgb(5, 87, 79);
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
   grid-gap: 10px;
 }
 
