--- a/css/styles.css
+++ b/css/styles.css
@@ -163,56 +163,72 @@ p {
 
 /* Checkout page */
 
+#checkout_img {
+  width: 300px;
+  margin-top: 20px;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-gap: 20px;
+  margin: 10px;
+}
+
 form {
-  padding: 1em;
+  display: flex;
+  text-align: left;
+  -ms-flex-direction: column;
+  padding: 0.9em;
   background: white;
   border: 1px solid #ccc;
-  margin-top: 2rem;
-  max-width: 400px;
+  margin-top: 20px;
+  max-width: 300px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 14px;
 }
 
 form input {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   background: white;
   border: 1px solid #ccc;
 }
+
+form label {
+  display: block;
+}
+
+fieldset {
+  width: 230px;
+}
+
+.review {
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  width: 6oopx;
+  max-height: 300px;
+}
+
 .checkout_cta {
-  background-color: #023530;
-  color: white;
+  background-color: #f3faf9;
+  color: rgb(230, 0, 0);
   font-size: 1em;
   padding: 10px 42px;
   font-weight: bold;
   border: 1px solid #ccc;
+  grid-column: 3 / 4;
+  position: absolute;
+  width: 220px;
+  left: 650px;
+  top: 550px;
+  text-align: center;
 }
 
 .checkout_cta:hover {
   background: rgb(5, 87, 79);
 }
 
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px;
-}
-
-.item-1 {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: row1-start;
-  grid-row-end: last-line;
-}
-
-.item-2 {
-  grid-column-start: 2;
-  grid-row: 3;
-}
-
-.item-3 {
-  grid-column-start: 3;
-  grid-column-end: 4;
-}
 /* Checkout success*/
 
 .success {
@@ -236,7 +252,7 @@ form input {
   background-size: cover;
   width: 100%;
   max-height: 50vw;
-  filter: blur(8px);
+  filter: blur(10px);
 }
 
 #search_field {
