--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ p {
   margin-top: 20px;
 }
 
-main {
+.checkout {
   display: grid;
   grid-template-columns: 300px 300px 300px;
   grid-gap: 20px;
