--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@
 
 #logo {
   display: inline-block;
-  height: 120px;
-  width: 250px;
+  height: 100px;
+  width: 207px;
   margin-right: 25px;
   align-items: initial;
 }
@@ -35,7 +35,7 @@
 header {
   display: flex;
   align-items: flex-end;
-  min-height: 122px;
+  height: 110px;
 }
 
 header a {
@@ -43,7 +43,7 @@ header a {
   align-items: flex-end;
   background-color: white;
   color: var(--green-color);
-  padding: 25px 25px 0px 25px;
+  padding: 0px 25px 0px 25px;
   font-size: 30px;
   font-weight: bolder;
 }
@@ -89,7 +89,7 @@ body {
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: bottom;
-  min-height: 70vh;
+  min-height: 50vh;
   position: relative;
 }
 
@@ -98,7 +98,7 @@ body {
   text-align: center;
   top: 10px;
   left: 180px;
-  color: #023530;
+  color: #ffffff;
   font-size: 40px;
 }
 
@@ -116,8 +116,8 @@ body {
 }
 .content {
   text-align: center;
-  padding: 5px;
-  font-size: 30px;
+  padding: 5px 0 0 0;
+  font-size: 20px;
   word-wrap: break-word;
   color: var(--green-color);
 }
@@ -146,7 +146,7 @@ p {
 }
 
 .featured {
-  display: grid;
+  display: flex;
   justify-content: space-around;
   grid-template-columns: repeat(6, minmax(0, 1fr));
   max-width: 1000px;
@@ -160,8 +160,20 @@ p {
   width: 100%;
   height: 150px;
 }
+/* Men */
 
+.featured_2 {
+  display: grid;
+  g
+}
 /* Jacketspecific Page */
+
+.specific_grid {
+  display: grid;
+  grid-template-columns: 250px 300px 300px;
+  grid-gap: 20px;
+  margin-left: 20px;
+}
 
 .img_small {
   float: left;
@@ -182,15 +194,43 @@ p {
   flex-direction: column;
 }
 
-.specific_grid {
-  display: grid;
-  grid-template-columns: 250px 300px 300px;
-  grid-gap: 20px;
-  margin: 10px;
+.product_description {
+  text-align: left;
+  border: 1px solid #ccc;
+  margin-top: 10px;
+  margin-left: 20px;
+  color: var(--green-color);
+  height: 320px;
+  width: 320px;
 }
 
-.sizes
+.sizes {
+  display: flex;
+  flex-direction: row;
+}
 
+.sizes p {
+  padding: 10px;
+  border: 1px solid #ccc;
+  justify-content: space-between;
+}
+
+.sizes_item {
+  width: 30px;
+}
+
+.addtocart_cta {
+  background-color: var(--green-color);
+  color: white;
+  font-size: 1em;
+  padding: 10px 42px;
+  font-weight: bold;
+  border: 1px solid #ccc;
+}
+
+.addtocart_cta:hover {
+  background: rgb(63, 155, 146);
+}
 /* Checkout page */
 
 #checkout_img {
@@ -336,10 +376,12 @@ fieldset {
   max-width: 150px;
 }
 /* Footer */
+
 footer {
   border-top: 1px solid;
   border-color: #475251;
-  height: 100px;
+  height: 30px;
+  display: flex;
 }
 
 footer p {
@@ -347,8 +389,11 @@ footer p {
   padding: 20px;
 }
 
+footer a p {
+  display: inline;
+}
+
 footer a {
-  display: flex;
   text-align: left;
   font-size: 1.5em;
   font-weight: bolder;
