--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "mic-32-new-web", Verdana, sans-serif;
-  src: url(https://use.typekit.net/ocq6hsb.css);
+  src: url("https://use.typekit.net/af/47ed3b/000000000000000077359c65/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
+    format("woff2");
 }
 
 :root {
@@ -27,7 +28,7 @@
   display: inline-block;
   height: 50px;
   width: 50px;
-  padding: 25px 25px 0px 50px;
+  padding: 25px 25px 0px 70px;
   margin-bottom: 0px;
   opacity: 60%;
 }
@@ -158,12 +159,26 @@ p {
 .featured img {
   object-fit: cover;
   width: 100%;
-  height: 150px;
+  height: 100px;
 }
 /* Men */
+.products img {
+  width: 100px;
+  margin-top: 6px;
+  vertical-align: middle;
+  object-fit: cover;
+}
 
 .featured_2 {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.products1 {
+  flex: 16.6%;
+  max-width: 16%;
+  padding: 0 4px;
 }
 
 /* Jacketspecific Page */
@@ -222,8 +237,9 @@ p {
 .addtocart_cta {
   background-color: var(--green-color);
   color: white;
-  font-size: 1em;
-  padding: 10px 42px;
+  font-size: 1.3em;
+  padding: 10px 40px;
+  margin-left: 20px;
   font-weight: bold;
   border: 1px solid #ccc;
 }
@@ -243,6 +259,7 @@ p {
   grid-template-columns: 300px 300px 300px;
   grid-gap: 20px;
   margin: 10px;
+  color: #0d685f;
 }
 
 form {
@@ -281,9 +298,9 @@ fieldset {
 }
 
 .checkout_cta {
-  background-color: #f3faf9;
-  color: rgb(230, 0, 0);
-  font-size: 1em;
+  background-color: #55b5a6;
+  color: white;
+  font-size: 1.2em;
   padding: 10px 42px;
   font-weight: bold;
   border: 1px solid #ccc;
@@ -322,7 +339,7 @@ fieldset {
   background-size: cover;
   width: 100%;
   max-height: 50vw;
-  filter: blur(10px);
+  filter: blur(3px);
 }
 
 #search_field {
@@ -338,9 +355,12 @@ fieldset {
 }
 
 #search_icon {
+  position: absolute;
   z-index: 2;
-  top: 300px;
-  left: 180px;
+  width: 40px;
+  height: 40px;
+  top: 325px;
+  left: 720px;
 }
 /* Contact page */
 
@@ -378,28 +398,11 @@ fieldset {
 /* Footer */
 
 footer {
-  border-top: 1px solid;
-  border-color: #475251;
-  height: 30px;
+  height: 10px;
   display: flex;
-}
-
-footer p {
-  text-align: right;
-  padding: 20px;
-}
-
-footer a p {
-  display: inline;
-}
-
-footer a {
-  text-align: left;
-  font-size: 1.5em;
-  font-weight: bolder;
-  padding: 20px;
-  color: #475251;
-  align-items: center;
+  justify-content: right;
+  font-size: 0.8em;
+  padding: -10px;
 }
 
 @media (max-width: 800px) {
