--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
   display: inline-block;
   height: 50px;
   width: 50px;
-  padding: 25px 25px 0px 200px;
+  padding: 25px 25px 0px 100px;
   margin-bottom: -12px;
 }
 
@@ -37,6 +37,11 @@ header {
   display: flex;
   align-items: flex-end;
   height: 110px;
+}
+
+.menu_list {
+  display: flex;
+  height: 108px;
 }
 
 header a {
@@ -362,6 +367,7 @@ fieldset {
   top: 325px;
   left: 720px;
 }
+
 /* Contact page */
 
 .contacts {
@@ -395,6 +401,7 @@ fieldset {
   text-align: center;
   max-width: 120px;
 }
+
 /* Footer */
 
 footer {
