--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ p {
 
 .specific_grid {
   display: grid;
-  grid-template-columns: 250px 300px 300px;
+  grid-template-columns: 180px 300px 400px;
   grid-gap: 20px;
   margin-left: 20px;
 }
@@ -218,32 +218,40 @@ p {
   text-align: left;
   border: 1px solid #ccc;
   margin-top: 10px;
-  margin-left: 20px;
+  margin-left: 39px;
   color: var(--green-color);
   height: 320px;
   width: 320px;
+  padding-left: 10px;
 }
 
 .sizes {
   display: flex;
   flex-direction: row;
+  text-align: center;
 }
 
 .sizes p {
-  padding: 10px;
+  padding: 5px;
   border: 1px solid #ccc;
   justify-content: space-between;
 }
 
 .sizes_item {
-  width: 30px;
+  width: 40px;
+  height: 20px;
+  padding: 2px 10px;
+}
+
+button {
+  width: 50px;
 }
 
 .addtocart_cta {
   background-color: var(--green-color);
   color: white;
   font-size: 1.3em;
-  padding: 10px 40px;
+  padding: 2px 40px;
   margin-left: 20px;
   font-weight: bold;
   border: 1px solid #ccc;
@@ -251,6 +259,10 @@ p {
 
 .addtocart_cta:hover {
   background: rgb(63, 155, 146);
+}
+
+.details {
+  padding-left: 20px;
 }
 /* Checkout page */
 
@@ -378,7 +390,7 @@ fieldset {
 .contact_img {
   background-size: cover;
   width: 100%;
-  max-height: 25vw;
+  max-height: 30vw;
 }
 
 .contact_points {
