--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,11 @@
 /* Contact page */
+.contact_picture {
+  background: url(../images/wideimagecomp2.jpeg) no-repeat bottom;
+  width: 1152px;
+  height: 300px;
+  background-size: 100% auto;
+  margin-left: 90px;
+}
 
 .contacts {
   display: flex;
@@ -6,9 +13,6 @@
 }
 
 .contact_img {
-  background-size: cover;
-  width: 100%;
-  max-height: 30vw;
 }
 
 .contact_points {
