--- a/css/jacketspecific.css
+++ b/css/jacketspecific.css
@@ -75,6 +75,15 @@ button {
   background: rgb(63, 155, 146);
 }
 
-.details {
+.sizes h3 {
+  margin-bottom: 0px;
+}
+
+.details_1 {
+  margin-bottom: 0px;
   padding-left: 20px;
+}
+
+.details_2 {
+  margin-top: 0px;
 }
