--- a/css/media.css
+++ b/css/media.css
@@ -9,8 +9,9 @@
     max-width: 320px;
   }
 
-  .featured {
-    display: flex;
+  .featured img {
+    width: 80vw;
+    height: 80vh;
   }
 
   .specific_grid {
@@ -19,6 +20,10 @@
 
   .checkout {
     display: block;
+  }
+
+  .form {
+    margin-left: 10px;
   }
 
   .checkout_cta {
@@ -54,8 +59,9 @@
     max-width: 460px;
   }
 
-  .featured {
-    display: flex;
+  .featured img {
+    width: 80vw;
+    height: 80vh;
   }
 
   #search_field {
@@ -75,10 +81,6 @@
 
   .content {
     max-width: 780px;
-  }
-
-  .featured {
-    display: flex;
   }
 
   #search_field {
@@ -101,15 +103,11 @@
     align-items: center;
   }
 
-  .featured {
-    flex-direction: column;
-    align-items: center;
-  }
-
   .featured img {
     width: 80vw;
     height: 80vh;
   }
+
   #logo {
     margin-right: 0px;
   }
