--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,25 @@
 @media (min-width: 320px) and (max-width: 480px) {
+  header {
+    display: inline-block;
+  }
+
+  nav ul {
+    display: inline-block;
+    margin-top: 0px;
+  }
+
+  #search {
+    padding: 0px;
+  }
+
+  #checkout {
+    padding: 0px;
+  }
+
+  .jackets h1 {
+    margin-top: 250px;
+  }
+
   .welcome__content {
     top: 36px;
     left: 115px;
@@ -9,7 +30,20 @@
     max-width: 320px;
   }
 
+  .featured {
+    display: block;
+  }
+
   .featured img {
+    width: 80vw;
+    height: 80vh;
+  }
+
+  .featured2 {
+    display: inline-block;
+  }
+
+  .featured2 img {
     width: 80vw;
     height: 80vh;
   }
@@ -19,10 +53,14 @@
   }
 
   .checkout {
-    display: block;
+    display: inline-block;
   }
 
   .form {
+    margin-left: 10px;
+  }
+
+  .fieldset {
     margin-left: 10px;
   }
 
@@ -83,6 +121,11 @@
     max-width: 780px;
   }
 
+  .featured img {
+    width: 80vw;
+    height: 80vh;
+  }
+
   #search_field {
     width: 588px;
     top: 268px;
@@ -101,11 +144,6 @@
   nav ul {
     flex-direction: column;
     align-items: center;
-  }
-
-  .featured img {
-    width: 80vw;
-    height: 80vh;
   }
 
   #logo {
