--- a/css/media.css
+++ b/css/media.css
@@ -5,6 +5,7 @@
 
   header {
     display: inline-block;
+    height: unset;
   }
 
   nav ul {
@@ -30,7 +31,7 @@
   }
 
   .welcome__content {
-    top: 333px;
+    top: 365px;
     left: 30px;
     font-size: 16px;
   }
@@ -45,7 +46,7 @@
 
   .featured {
     display: block;
-    margin-top: 325px;
+    margin-top: 165px;
     margin-left: 34px;
   }
 
@@ -55,7 +56,7 @@
   }
 
   .jackets h1 {
-    margin-top: 256px;
+    margin-top: 17px;
     margin-left: 45px;
   }
 
@@ -75,12 +76,12 @@
 
   .specific_grid {
     display: block;
-    margin-top: 230px;
+    margin-top: -200px;
   }
 
   .checkout {
     display: inline-block;
-    margin-top: 230px;
+    margin-top: -224px;
   }
 
   .form {
@@ -99,6 +100,7 @@
 
   .success {
     background-size: cover;
+    margin-top: -240px;
   }
 
   .success__content {
@@ -111,7 +113,8 @@
 
   .contacts {
     display: grid;
-    margin-top: 50px;
+    grid-template-columns: 1fr 1fr;
+    margin-top: -219px;
   }
 
   .search_page img {
@@ -134,6 +137,7 @@
 @media (min-width: 481px) and (max-width: 799px) {
   header {
     display: inline-block;
+    height: unset;
   }
 
   nav ul {
@@ -154,7 +158,7 @@
   }
 
   .welcome__content {
-    top: 312px;
+    top: 330px;
     left: 28px;
     font-size: 25px;
   }
@@ -167,9 +171,13 @@
     display: none;
   }
 
+  #pushing {
+    color: #023530;
+  }
+
   .featured {
     display: block;
-    margin-top: 348px;
+    margin-top: 145px;
     margin-left: 40px;
   }
 
@@ -179,7 +187,7 @@
   }
 
   .jackets h1 {
-    margin-top: 250px;
+    margin-top: 13px;
     margin-left: 45px;
   }
 
@@ -199,12 +207,12 @@
 
   .specific_grid {
     display: block;
-    margin-top: 230px;
+    margin-top: -3px;
   }
 
   .checkout {
     display: inline-block;
-    margin-top: 230px;
+    margin-top: -26px;
   }
 
   .form {
@@ -223,7 +231,7 @@
 
   .success {
     background-size: cover;
-    margin-top: 110px;
+    margin-top: -78px;
   }
 
   .success__content {
@@ -237,7 +245,8 @@
 
   .contacts {
     display: grid;
-    margin-top: 240px;
+    grid-template-columns: 1fr 1fr;
+    margin-top: -6px;
   }
 
   .search_page img {
@@ -258,8 +267,8 @@
 }
 
 @media (min-width: 800px) and (max-width: 1199px) {
-  header main {
-    max-width: 100vw;
+  header {
+    height: unset;
   }
 
   #logo {
@@ -289,7 +298,7 @@
 
   .welcome__content {
     top: 175px;
-    left: 48px;
+    left: 260px;
     font-size: 15px;
     color: #023530;
   }
@@ -300,7 +309,7 @@
 
   .content {
     max-width: 780px;
-    margin-top: 151px;
+    margin-top: 80px;
   }
 
   .featured {
@@ -314,7 +323,7 @@
   }
 
   .jackets h1 {
-    margin-top: 110px;
+    margin-top: 18px;
     margin-left: 4px;
   }
 
@@ -337,7 +346,7 @@
   .checkout {
     grid-gap: 5px;
     margin: 5px;
-    margin-top: 40px;
+    margin-top: -5px;
   }
 
   form {
@@ -363,6 +372,7 @@
 
   .success {
     background-size: cover;
+    margin-top: -98px;
   }
 
   .contact_picture {
