--- a/css/checkout.css
+++ b/css/checkout.css
@@ -10,7 +10,7 @@
   grid-template-columns: 300px 300px 300px;
   grid-gap: 20px;
   margin: 10px;
-  color: #0d685f;
+  color: var(--light-green-color);
 }
 
 form {
@@ -18,8 +18,8 @@ form {
   text-align: left;
   -ms-flex-direction: column;
   padding: 0.9em;
-  background: white;
-  border: 1px solid #ccc;
+  background: var(--white-color);
+  border: 1px solid var(--grey-color);
   margin-top: 20px;
   max-width: 300px;
   margin-left: auto;
@@ -29,8 +29,8 @@ form {
 
 form input {
   margin-bottom: 0.5rem;
-  background: white;
-  border: 1px solid #ccc;
+  background: var(--white-color);
+  border: 1px solid var(--grey-color);
 }
 
 form label {
@@ -43,7 +43,7 @@ fieldset {
 
 .review {
   margin-top: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--grey-color);
   width: 6oopx;
   max-height: 300px;
 }
