--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ header {
 }
 
 nav {
+  display: none;
   margin-left: 25px;
 }
 
@@ -72,7 +73,7 @@ nav li {
 }
 
 body {
-  font-family: "Mic 32 New";
+  font-family: "mic-32-new-web";
   min-height: 100vh;
   max-width: 1600px;
   margin: 0px auto;
