--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,16 @@
 
 #search {
   display: inline-block;
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   padding: 25px 25px 0px 100px;
   margin-bottom: -12px;
+}
+
+#search_field {
+  border: 5px solid orange;
+  margin-left: 50px;
+  margin-right: -100px;
 }
 
 #checkout {
@@ -52,7 +58,7 @@ header {
 }
 
 nav {
-  display: none;
+  /* display: none; */
   margin-left: 25px;
 }
 
@@ -81,8 +87,6 @@ body {
   -ms-grid-row-align: end;
   grid-template-rows: auto;
 }
-
-/* Footer */
 
 footer {
   height: 10px;
