--- a/css/contact.css
+++ b/css/contact.css
@@ -1,34 +1,71 @@
-/* Contact page */
-.contact_picture {
-  background: url(../images/wideimagecomp2.jpeg) no-repeat bottom;
-  width: 1152px;
-  height: 300px;
-  background-size: 100% auto;
-  margin-left: 100px;
-}
-
 .contacts {
-  display: flex;
-  justify-content: space-evenly;
+  /* margin-left: 200px;
+  margin-top: -250px;
+  margin-bottom: 100px; */
+  display: grid;
+  grid-template-columns: 400px 400px;
+  grid-gap: 5px;
+  margin-left: 250px;
+  /* margin-top: -200px; */
+  margin-bottom: 50px;
+  /* display: flex;
+  justify-content: space-evenly; */
 }
 
 .contact_points {
-  display: inline-block;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  margin-bottom: 15px;
 }
 
-.contact_points img {
-  object-fit: cover;
-  width: 120px;
-  height: 120px;
+.contact_points h1 {
+  font-size: 25px;
+  margin-bottom: 15px;
 }
 
-.contact_points h3 {
+.contact_points h2 {
   grid-column: 1;
-  font-size: 0.8em;
+  font-size: 17px;
   margin: 5px;
-  text-align: center;
-  max-width: 120px;
+  /* text-align: center;
+  max-width: 120px; */
 }
+
+.contact_points a {
+  color: black;
+}
+
+form {
+  display: flex;
+  text-align: left;
+  -ms-flex-direction: column;
+  padding: 10px;
+  background: var(--white-color);
+  border: 1px solid var(--grey-color);
+  margin-top: 20px;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 17px;
+}
+
+form input {
+  margin-bottom: 0.5rem;
+  background: var(--white-color);
+  border: 1px solid var(--grey-color);
+}
+
+form label {
+  display: block;
+}
+
+fieldset {
+  width: 300px;
+}
+
+.form-error {
+  display: none;
+  color: red;
+  font-size: 12px;
+}
+/* .contact_points {
+  margin: 15px;
+} */
