--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,13 +1,14 @@
-#checkout_img {
+/* #checkout_img {
   width: 300px;
   margin-top: 20px;
-}
+} */
 
 .checkout {
-  display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-gap: 20px;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px; */
   margin: 10px;
+  margin-left: 100px;
   color: var(--light-green-color);
 }
 
@@ -19,16 +20,27 @@ form {
   background: var(--white-color);
   border: 1px solid var(--grey-color);
   margin-top: 20px;
-  max-width: 300px;
+  /* max-width: 300px; */
   margin-left: auto;
   margin-right: auto;
-  font-size: 14px;
+  /* font-size: 14px; */
 }
 
 form input {
   margin-bottom: 0.5rem;
   background: var(--white-color);
   border: 1px solid var(--grey-color);
+  height: 30px;
+  /* width: 300px; */
+  border-radius: 4px;
+}
+
+.input-simple {
+  width: 400px;
+}
+
+.input-onerow {
+  display: flex;
 }
 
 form label {
@@ -36,12 +48,39 @@ form label {
 }
 
 fieldset {
-  width: 230px;
+  width: 300px;
 }
 
 .review {
   margin-top: 20px;
   border: 1px solid var(--grey-color);
-  width: 6oopx;
-  max-height: 300px;
+  /* width: 6oopx; */
+  max-height: 448px;
+}
+
+.review-row {
+  display: flex;
+  padding-right: 10px;
+}
+
+.review-title {
+  padding-right: 100px;
+}
+
+.cart-img {
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+}
+
+.review-fillup {
+  display: flex;
+}
+
+.quantity-input {
+  width: 25px;
+}
+
+.review-fillup-parts {
+  padding-right: 30px;
 }
