--- a/css/jacketspecific.css
+++ b/css/jacketspecific.css
@@ -37,6 +37,10 @@
   padding-left: 10px;
 }
 
+.product_description h2 {
+  font-size: 25px;
+}
+
 .sizes {
   display: flex;
   flex-direction: row;
@@ -61,9 +65,9 @@
   display: flex;
 }
 
-.qty_3 {
+/* .qty_3 {
   margin-left: 10px;
-}
+} */
 
 .qty_2 {
   width: 20px;
@@ -81,5 +85,10 @@
 }
 
 .details_2 {
-  margin-top: 0px;
+  margin-top: 0px;¨
+  font-size: 10px;
 }
+
+/* .quantity-input {
+  width: 30px;
+} */
