--- a/css/productpages.css
+++ b/css/productpages.css
@@ -51,3 +51,26 @@
   padding: 0px 5px;
   margin-top: 0px;
 }
+
+.product-image {
+  object-fit: cover;
+  width: 150px;
+  height: 150px;
+}
+
+.newproducts {
+  display: flex;
+  justify-content: space-around;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  max-width: 1000px;
+  margin: 10px auto;
+  grid-gap: 10px;
+  flex-wrap: wrap;
+}
+
+
+
+.newproducts h2 {
+  color: var(--dark-green-color)
+}
+
